--- a/MC2-KisahKata/Base.lproj/Main.storyboard
+++ b/MC2-KisahKata/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Home View Controller-->
+        <!--KisahKata-->
         <scene sceneID="YFC-vU-ido">
             <objects>
                 <viewController id="PDB-F9-Xvo" customClass="HomeViewController" customModule="MC2_KisahKata" customModuleProvider="target" sceneMemberID="viewController">
@@ -60,7 +60,7 @@
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ldz-Xh-Dzk">
                                 <rect key="frame" x="15" y="260" width="360" height="550"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="dKX-jb-CDQ">
                                     <rect key="frame" x="0.0" y="0.0" width="360" height="2"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -85,7 +85,7 @@
                             <constraint firstItem="oKs-vT-93v" firstAttribute="top" secondItem="R39-su-YIV" secondAttribute="bottom" constant="12" id="xUU-Sf-qOd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="xik-kp-kQT"/>
+                    <navigationItem key="navigationItem" title="KisahKata" id="xik-kp-kQT"/>
                     <connections>
                         <outlet property="temaTableView" destination="ldz-Xh-Dzk" id="1NN-pg-5su"/>
                         <outlet property="userLabel" destination="R39-su-YIV" id="CaP-im-KNY"/>
@@ -956,14 +956,14 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="M-Eggy-Senang " translatesAutoresizingMaskIntoConstraints="NO" id="E36-ge-uQ9">
-                            <rect key="frame" x="89" y="8" width="173" height="140"/>
+                            <rect key="frame" x="89" y="8" width="140" height="140"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="140" id="6oI-0Y-eFb"/>
                                 <constraint firstAttribute="height" constant="140" id="dub-7B-ekc"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jawaban Kamu Benar" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UfN-oL-ape">
-                            <rect key="frame" x="45" y="148" width="262" height="89"/>
+                            <rect key="frame" x="45" y="148" width="229" height="89"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="229" id="DUu-uH-LTI"/>
                                 <constraint firstAttribute="height" constant="89" id="qj5-Hf-ZVj"/>
@@ -972,7 +972,7 @@
                             <color key="textColor" name="TextSucessColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gaa-lc-BUa">
-                            <rect key="frame" x="15" y="396" width="321" height="45"/>
+                            <rect key="frame" x="15" y="396" width="288" height="45"/>
                             <color key="backgroundColor" name="PrimaryColor"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="321" id="XAm-qa-m8f"/>
