--- a/MC2-KisahKata/Cell/TemaTableViewCell.xib
+++ b/MC2-KisahKata/Cell/TemaTableViewCell.xib
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="temaCell" id="KGk-i7-Jjw" customClass="TemaTableViewCell" customModule="MC2_KisahKata" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="329" height="389"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="329" height="389"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -28,8 +28,8 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dXp-N3-05x">
-                        <rect key="frame" x="29" y="75" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="29" y="75" width="57" height="29"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -40,8 +40,8 @@
                             <constraint firstAttribute="width" constant="139" id="TLV-EJ-xf8"/>
                         </constraints>
                     </imageView>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-hy-Xyp">
-                        <rect key="frame" x="0.0" y="134" width="329" height="266"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-hy-Xyp">
+                        <rect key="frame" x="0.0" y="121" width="329" height="266"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lzw-XU-EA3">
                             <size key="itemSize" width="128" height="128"/>
@@ -59,13 +59,13 @@
                     <constraint firstAttribute="trailing" secondItem="Vz7-hy-Xyp" secondAttribute="trailing" id="8n5-T7-eLO"/>
                     <constraint firstItem="ddm-ba-Lbf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9X8-fS-tOE"/>
                     <constraint firstItem="jaq-qN-MWZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9cS-iN-vae"/>
-                    <constraint firstItem="Vz7-hy-Xyp" firstAttribute="top" secondItem="dXp-N3-05x" secondAttribute="bottom" constant="38" id="Aw1-y8-6qK"/>
+                    <constraint firstItem="Vz7-hy-Xyp" firstAttribute="top" secondItem="dXp-N3-05x" secondAttribute="bottom" constant="17" id="Aw1-y8-6qK"/>
                     <constraint firstItem="3JV-Yg-O0p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="BYS-VS-6Jz"/>
                     <constraint firstItem="jaq-qN-MWZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Oo0-bT-dkc"/>
                     <constraint firstItem="dXp-N3-05x" firstAttribute="top" secondItem="3JV-Yg-O0p" secondAttribute="bottom" constant="4" id="P6f-BY-IIh"/>
                     <constraint firstAttribute="trailing" secondItem="jaq-qN-MWZ" secondAttribute="trailing" constant="-22" id="Uy0-vo-cM6"/>
                     <constraint firstItem="3JV-Yg-O0p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="50" id="egU-c0-uKQ"/>
-                    <constraint firstItem="Vz7-hy-Xyp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="gxM-B6-55c"/>
+                    <constraint firstItem="Vz7-hy-Xyp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="9" id="gxM-B6-55c"/>
                     <constraint firstAttribute="trailing" secondItem="jaq-qN-MWZ" secondAttribute="trailing" constant="-22" id="h0g-dQ-bYm"/>
                     <constraint firstItem="ddm-ba-Lbf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jKK-o1-WSO"/>
                     <constraint firstAttribute="bottom" secondItem="ddm-ba-Lbf" secondAttribute="bottom" constant="20" id="qae-4z-ITj"/>
