--- a/MC2-KisahKata/View/JudulCollectionViewCell.xib
+++ b/MC2-KisahKata/View/JudulCollectionViewCell.xib
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-ExtraBold.ttf">
+            <string>Baloo2-ExtraBold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,7 +22,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLM-wd-qlt">
-                        <rect key="frame" x="10" y="23" width="160" height="21"/>
+                        <rect key="frame" x="15" y="23" width="160" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="ZV7-6h-Hgd"/>
                             <constraint firstAttribute="width" constant="160" id="g1x-uk-tbA"/>
@@ -33,18 +38,28 @@
                             <constraint firstAttribute="width" constant="132" id="paM-Z9-X7L"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lqi-5L-QVp">
+                        <rect key="frame" x="18" y="3" width="15" height="61"/>
+                        <fontDescription key="fontDescription" name="Baloo2-ExtraBold" family="Baloo 2" pointSize="38"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="RLM-wd-qlt" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="23" id="AZa-Wr-T39"/>
-                <constraint firstItem="RLM-wd-qlt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="MBr-P1-RyI"/>
+                <constraint firstItem="Lqi-5L-QVp" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="18" id="JfH-gB-puA"/>
+                <constraint firstItem="RLM-wd-qlt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="MBr-P1-RyI"/>
+                <constraint firstItem="Lqi-5L-QVp" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="3" id="QFP-Wo-LrT"/>
+                <constraint firstAttribute="bottom" secondItem="Lqi-5L-QVp" secondAttribute="bottom" constant="3" id="Xfm-bD-GPa"/>
                 <constraint firstAttribute="bottom" secondItem="qEA-gu-0b5" secondAttribute="bottom" constant="18" id="eYH-gK-gLm"/>
                 <constraint firstAttribute="trailing" secondItem="qEA-gu-0b5" secondAttribute="trailing" constant="10" id="huF-Po-Zpi"/>
             </constraints>
             <connections>
                 <outlet property="judulLabel" destination="RLM-wd-qlt" id="vvb-GF-XAu"/>
+                <outlet property="numberTitleLabel" destination="Lqi-5L-QVp" id="5B8-4T-agA"/>
                 <outlet property="scoreImage" destination="qEA-gu-0b5" id="nh2-tn-DBy"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="103.45982142857143"/>
