--- a/MC2-KisahKata/View/TemaTableViewCell.xib
+++ b/MC2-KisahKata/View/TemaTableViewCell.xib
@@ -7,6 +7,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-ExtraBold.ttf">
+            <string>Baloo2-ExtraBold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,7 +24,20 @@
                 <subviews>
                     <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddm-ba-Lbf">
                         <rect key="frame" x="0.0" y="0.0" width="329" height="369"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.040000000000000001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Perkenalan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9TI-qa-5NM">
+                                <rect key="frame" x="23" y="40" width="283" height="71"/>
+                                <fontDescription key="fontDescription" name="Baloo2-ExtraBold" family="Baloo 2" pointSize="45"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9TI-qa-5NM" secondAttribute="trailing" constant="23" id="Tht-eG-J1s"/>
+                            <constraint firstItem="9TI-qa-5NM" firstAttribute="top" secondItem="ddm-ba-Lbf" secondAttribute="top" constant="40" id="dz2-LV-ijh"/>
+                            <constraint firstItem="9TI-qa-5NM" firstAttribute="leading" secondItem="ddm-ba-Lbf" secondAttribute="leading" constant="23" id="mTv-Nb-W6y"/>
+                        </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3JV-Yg-O0p">
                         <rect key="frame" x="29" y="50" width="42" height="21"/>
@@ -28,12 +46,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dXp-N3-05x">
-                        <rect key="frame" x="29" y="75" width="57" height="29"/>
+                        <rect key="frame" x="29" y="73" width="57" height="29"/>
                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="M-Eggy-Hello" translatesAutoresizingMaskIntoConstraints="NO" id="jaq-qN-MWZ">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="M-Eggy-Hello2" translatesAutoresizingMaskIntoConstraints="NO" id="jaq-qN-MWZ">
                         <rect key="frame" x="212" y="0.0" width="139" height="180"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="180" id="BWj-xw-CEO"/>
@@ -41,7 +59,7 @@
                         </constraints>
                     </imageView>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-hy-Xyp">
-                        <rect key="frame" x="0.0" y="121" width="329" height="266"/>
+                        <rect key="frame" x="0.0" y="119" width="329" height="268"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lzw-XU-EA3">
                             <size key="itemSize" width="128" height="128"/>
@@ -62,7 +80,7 @@
                     <constraint firstItem="Vz7-hy-Xyp" firstAttribute="top" secondItem="dXp-N3-05x" secondAttribute="bottom" constant="17" id="Aw1-y8-6qK"/>
                     <constraint firstItem="3JV-Yg-O0p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="BYS-VS-6Jz"/>
                     <constraint firstItem="jaq-qN-MWZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Oo0-bT-dkc"/>
-                    <constraint firstItem="dXp-N3-05x" firstAttribute="top" secondItem="3JV-Yg-O0p" secondAttribute="bottom" constant="4" id="P6f-BY-IIh"/>
+                    <constraint firstItem="dXp-N3-05x" firstAttribute="top" secondItem="3JV-Yg-O0p" secondAttribute="bottom" constant="2" id="P6f-BY-IIh"/>
                     <constraint firstAttribute="trailing" secondItem="jaq-qN-MWZ" secondAttribute="trailing" constant="-22" id="Uy0-vo-cM6"/>
                     <constraint firstItem="3JV-Yg-O0p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="50" id="egU-c0-uKQ"/>
                     <constraint firstItem="Vz7-hy-Xyp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="9" id="gxM-B6-55c"/>
@@ -86,7 +104,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="M-Eggy-Hello" width="937" height="1303"/>
+        <image name="M-Eggy-Hello2" width="926" height="1158"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
